[package]
name = "common_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.26"
solana-program-pack = "2.1.11"
solana-program-test = "1.18.26"
solana-program-runtime = "1.18.26"
solana-sdk = "1.18.26"
test-context = "0.4.1"
common = { path = "../" }
cross-chain-escrow-dst = { path = "../../programs/cross-chain-escrow-dst", features = ["cpi"] }
cross-chain-escrow-src = { path = "../../programs/cross-chain-escrow-src", features = ["cpi"] }
async-trait = "0.1.88"
