[package]
name = "common_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.1.0"
solana-program-pack = "2.1.0"
solana-program-test = "2.1.0"
solana-program-runtime = "2.1.0"
solana-sdk = "2.1.0"
test-context = "0.4.1"
common = { path = "../" }
cross-chain-escrow-dst = { path = "../../programs/cross-chain-escrow-dst", features = ["cpi"] }
cross-chain-escrow-src = { path = "../../programs/cross-chain-escrow-src", features = ["cpi"] }
whitelist = { path = "../../programs/whitelist", features = ["no-entrypoint"] }
async-trait = "0.1.88"
