[package]
name = "cross-chain-escrow-dst"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_chain_escrow_dst"

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
common = { path = "../../common" }
whitelist = { path = "../whitelist", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program = "2.1.0"
solana-program-pack = "2.1.0"
solana-program-test = "2.1.0"
solana-program-runtime = "2.1.0"
solana-sdk = "2.1.0"
test-context = "0.4.1"
common_tests = { path = "../../common/tests" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
