[package]
name = "trading-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
cross-chain-escrow-src = { path = "../cross-chain-escrow-src", features = ["cpi"] }
common = { path = "../../common" }

[dev-dependencies]
solana-program = "2.1.0"
solana-program-pack = "2.1.0"
solana-program-test = "2.1.0"
solana-program-runtime = "2.1.0"
solana-sdk = "2.1.0"
test-context = "0.4.1"
ed25519-dalek = "2.0"
common_tests = { path = "../../common/tests" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
