[package]
name = "cross_chain_escrow_dst_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.26"
solana-program-pack = "2.1.11"
solana-program-test = "1.18.26"
solana-program-runtime = "1.18.26"
solana-sdk = "1.18.26"
test-context = "0.4.1"
common = { path = "../../../common" }
cross-chain-escrow-dst = { path = "../" }
common_tests = { path = "../../../common/tests" }
